# numeo-ai-task

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
app/core/: config.py  logging_config.py
app/db/: db_storage.py  load.py
app/models/: base_model.py  conversation.py  email.py  gmail_account.py  order.py  refund.py
app/routers/: __init__.py  auth.py  gmail_webhook.py  web.py
app/services/: auth.py  classifier.py  gmail_processing.py  gmail_sender.py  refund_service.py
app/services/rag/: answerer.py  ingest.py  loaders.py  vectorstore_provider.py
app/templates/: index.html
knowledge/docs/: numeo_kb.md
scripts/: ingest_kb.py  seed.py
