[project]
name = "numeo-ai-task"
version = "0.1.0"
description = "AI-Product-Engineer-Tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "loguru>=0.7.3",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-api-python-client>=2.181.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.16.5",
    "jinja2>=3.1.6",
    "openai>=1.107.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "pgvector>=0.4.1",
]
